# kestrel

./: .gitignore  Cargo.toml  Kestrel-Architecture-Spec.docx  LICENSE  README.md
.github/workflows/: ci.yml
crates/kestrel-agent/: Cargo.toml
crates/kestrel-agent/src/: config.rs  lib.rs  main.rs  transport.rs
crates/kestrel-agent/src/capabilities/: ax.rs  clipboard.rs  encoder.rs  input.rs  mod.rs  screen.rs  screen_stream.rs  shell.rs  webrtc_session.rs
crates/kestrel-agent/src/capabilities/ax/: linux.rs  macos.rs  mod.rs  windows.rs
crates/kestrel-agent/src/capabilities/plugins/: mod.rs
crates/kestrel-agent/src/capabilities/world/: linux.rs  macos.rs  mod.rs  windows.rs
crates/kestrel-agent/tests/: proptest_input.rs  unenroll.rs
crates/kestrel-hub/: Cargo.toml
crates/kestrel-hub/assets/: dashboard.css  node-detail.js  shell.js  webrtc.js
crates/kestrel-hub/src/: audit.rs  capabilities_parse.rs  client.rs  config.rs  doctor.rs  enrollment.rs  events.rs  jobs.rs  kvm.rs  lib.rs  main.rs  mcp.rs  oidc.rs  policy.rs  router.rs  sandbox.rs  sandbox_bootstrap.rs  shutdown.rs  status.rs  supervisor.rs  transport.rs  webrtc.rs  workflow.rs
crates/kestrel-hub/src/dashboard/: api.rs  mod.rs  session.rs  sse.rs  templates.rs
crates/kestrel-hub/src/tui/: client.rs  mod.rs  view.rs
crates/kestrel-hub/tests/: cli_add_remove.rs  cli_layout.rs  client_auth.rs  coverage_gaps.rs  dashboard_auth.rs  dashboard_health.rs  dashboard_layout_api.rs  dashboard_screenshot.rs  dashboard_session_auth.rs  dashboard_shell.rs  dashboard_tls.rs  dashboard_ui_writes.rs  dashboard_webrtc_api.rs  dashboard_world.rs  embedded_assets.rs  load.rs  mcp_audit.rs  per_node_psk_rejection.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5_reconnect.rs  phase6_cli.rs  phase7_hot_reload.rs  phase_6_13_integration.rs  snapshots.rs  unenroll.rs
crates/kestrel-hub/tests/snapshots/: snapshots__audit_log_line_shape.snap  snapshots__audit_log_type_text_redacted.snap  snapshots__index_anonymous.snap  snapshots__login_form.snap  snapshots__node_detail_signed_in.snap
crates/kestrel-proto/: Cargo.toml
crates/kestrel-proto/src/: auth.rs  keys.rs  lib.rs  message.rs  world.rs
crates/kestrel-proto/tests/: proptest_wire.rs
crates/kestrel-test/: Cargo.toml
crates/kestrel-test/src/: lib.rs
docs/: plugin-authoring.md
docs/superpowers/plans/: 2026-05-17-kestrel-phase1-foundation.md  2026-05-17-kestrel-phase2-input-screen.md  2026-05-17-kestrel-phase3-clipboard-shell.md  2026-05-17-kestrel-phase4-ax-tree.md  2026-05-17-kestrel-phase5-dashboard-polish.md  2026-05-17-kestrel-phase6-tui-and-cli-completeness.md  2026-05-17-kestrel-phase7-hot-reload.md  2026-05-23-kestrel-next-gen-roadmap.md  2026-05-23-phase6-world-state.md  2026-05-23-webrtc-streaming.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: bincode_decode.rs  input_event_json.rs
packaging/: build-release.ps1  build-release.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
