[workspace]
members = [
    "crates/kestrel-proto",
    "crates/kestrel-agent",
    "crates/kestrel-hub",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
bincode            = { version = "2", features = ["serde"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite  = { version = "0.21", features = ["rustls-tls-native-roots"] }
rustls             = "0.21"
rand               = "0.8"
futures-util       = "0.3"
clap               = { version = "4", features = ["derive"] }
toml               = "0.8"
keyring            = "2"
hex                = "0.4"
