[workspace]
members = [
    "crates/kestrel-proto",
    "crates/kestrel-agent",
    "crates/kestrel-hub",
    "crates/kestrel-test",
]
# fuzz/ is intentionally NOT in the workspace. `cargo fuzz` rebuilds
# under nightly with sanitizer flags that don't play nicely with the
# stable-built workspace cache; keeping it out-of-tree means `cargo
# test` in the workspace stays unaffected. Run targets via
# `cargo +nightly fuzz run <target>` from the fuzz/ directory.
exclude = ["fuzz"]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
bincode            = { version = "2", features = ["serde"] }
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite  = { version = "0.21", features = ["rustls-tls-native-roots"] }
rustls             = "0.21"
tokio-rustls       = "0.24"
rand               = "0.8"
futures-util       = "0.3"
clap               = { version = "4", features = ["derive"] }
toml               = "0.8"
keyring            = "2"
hex                = "0.4"
enigo    = "0.6"
xcap     = "0.9"
image    = "0.25"
rdev     = "0.5"
rmcp     = { version = "1", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
base64   = "0.22"
serde_json = "1"
arboard      = "3"
portable-pty = "0.8"
accessibility     = "0.2"
accessibility-sys = "0.2"
objc              = "0.2"
axum         = { version = "0.7", features = ["macros", "ws"] }
axum-server  = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls_23    = { package = "rustls", version = "0.23", default-features = false, features = ["ring", "std"] }
tower        = "0.5"
tokio-stream = { version = "0.1", features = ["sync"] }
maud         = { version = "0.26", features = ["axum"] }
futures      = "0.3"
tempfile = "3"
hostname = "0.4"
ratatui            = "0.29"
crossterm          = "0.28"
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
eventsource-client = "0.13"
zeroize            = { version = "1", features = ["derive"] }
openidconnect     = "3"
webrtc            = "0.11"
openh264          = "0.6"
bytes             = "1"
proptest          = "1"
insta             = { version = "1", features = ["json", "yaml"] }
