[package]
name    = "kestrel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Out-of-workspace by design. See the parent Cargo.toml's `exclude`.
# This crate hosts cargo-fuzz targets that hit our wire-facing
# parsers — bincode KestrelMessage decoding, JSON InputEvent parsing.
# Not run in regular CI; invoke with:
#
#   cd fuzz
#   cargo +nightly fuzz run bincode_decode
#
# libfuzzer-sys does the harness instrumentation. cargo-fuzz needs to
# be installed (`cargo install cargo-fuzz`) and a nightly toolchain
# pinned (`rustup install nightly`). See README.

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys  = "0.4"
serde_json     = "1"
kestrel-proto  = { path = "../crates/kestrel-proto" }
kestrel-agent  = { path = "../crates/kestrel-agent" }
bincode        = { version = "2", features = ["serde"] }

[[bin]]
name             = "bincode_decode"
path             = "fuzz_targets/bincode_decode.rs"
test             = false
doc              = false
bench            = false

[[bin]]
name             = "input_event_json"
path             = "fuzz_targets/input_event_json.rs"
test             = false
doc              = false
bench            = false
