[package]
name    = "kestrel-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
kestrel-proto      = { path = "../kestrel-proto" }
tokio              = { workspace = true }
serde              = { workspace = true }
bincode            = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite  = { workspace = true }
tokio-rustls       = "0.24"
rustls             = { workspace = true }
rcgen              = "0.11"
rand               = { workspace = true }
futures-util       = { workspace = true }
clap               = { workspace = true }
toml               = { workspace = true }
keyring            = { workspace = true }
hex                = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
