[package]
name    = "kestrel-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
kestrel-proto      = { path = "../kestrel-proto" }
tokio              = { workspace = true }
serde              = { workspace = true }
bincode            = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite  = { workspace = true }
tokio-rustls       = { workspace = true }
rustls             = { workspace = true }
rcgen              = "0.11"
rand               = { workspace = true }
futures-util       = { workspace = true }
clap               = { workspace = true }
toml               = { workspace = true }
keyring            = { workspace = true }
hex                = { workspace = true }
enigo  = { workspace = true }
xcap   = { workspace = true }
image  = { workspace = true }
arboard      = { workspace = true }
portable-pty = { workspace = true }
hostname     = { workspace = true }
zeroize      = { workspace = true }
sha2         = "0.10"
serde_json   = { workspace = true }
openh264     = { workspace = true }
bytes        = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
accessibility     = { workspace = true }
accessibility-sys = { workspace = true }
objc              = { workspace = true }

# Silence the `unexpected_cfgs` warnings emitted by objc 0.2's macros
# (which test `cfg(feature = "cargo-clippy")` for compatibility with
# old clippy versions — a cfg modern rustc's check-cfg pass doesn't
# know about). The macros work correctly; the warnings are noise.
[lints.rust]
unexpected_cfgs = { level = "allow" }

# Linux: AT-SPI via D-Bus. atspi is async + zbus-based; we run it under a
# small tokio current-thread runtime inside describe() so the public
# entry point stays synchronous, matching the macOS and Windows paths.
[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.22"
# X11 cursor query via XQueryPointer. Pure-Rust client (no libX11 link),
# gated behind runtime DISPLAY presence so a Wayland-only session
# silently returns None rather than crashing.
x11rb = { version = "0.13", default-features = false }

# Windows: UI Automation via the uiautomation crate (a thin wrapper over
# the COM API). Pulls in windows-rs + COM bindings, gated to Windows
# builds only.
[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.16"

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
