[package]
name    = "kestrel-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
kestrel-proto      = { path = "../kestrel-proto" }
tokio              = { workspace = true }
serde              = { workspace = true }
bincode            = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite  = { workspace = true }
rustls             = { workspace = true, features = ["dangerous_configuration"] }
rand               = { workspace = true }
futures-util       = { workspace = true }
tokio-rustls       = { workspace = true }
clap               = { workspace = true }
toml               = { workspace = true }
keyring            = { workspace = true }
hex                = { workspace = true }
rmcp       = { workspace = true }
base64     = { workspace = true }
rdev       = { workspace = true }
serde_json = { workspace = true }
xcap       = { workspace = true }
axum         = { workspace = true }
tokio-stream = { workspace = true }
maud         = { workspace = true }
futures      = { workspace = true }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
reqwest            = { workspace = true }
eventsource-client = { workspace = true }

[dev-dependencies]
kestrel-agent = { path = "../kestrel-agent" }
tokio         = { workspace = true }
tempfile      = { workspace = true }
tower         = { workspace = true, features = ["util"] }
