[package]
name    = "kestrel-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
kestrel-proto      = { path = "../kestrel-proto" }
tokio              = { workspace = true }
serde              = { workspace = true }
bincode            = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-tungstenite  = { workspace = true }
rustls             = { workspace = true, features = ["dangerous_configuration"] }
rand               = { workspace = true }
futures-util       = { workspace = true }
tokio-rustls       = { workspace = true }
clap               = { workspace = true }
toml               = { workspace = true }
keyring            = { workspace = true }
hex                = { workspace = true }
hmac               = "0.12"
sha2               = "0.10"
zeroize            = { workspace = true }
rmcp       = { workspace = true }
schemars   = { workspace = true }
base64     = { workspace = true }
rdev       = { workspace = true }
serde_json = { workspace = true }
xcap       = { workspace = true }
axum         = { workspace = true }
axum-server  = { workspace = true }
rustls_23    = { workspace = true }
async-trait  = "0.1"
tokio-stream = { workspace = true }
maud         = { workspace = true }
futures      = { workspace = true }
ratatui            = { workspace = true }
crossterm          = { workspace = true }
reqwest            = { workspace = true }
eventsource-client = { workspace = true }

[dev-dependencies]
kestrel-agent = { path = "../kestrel-agent" }
tokio         = { workspace = true }
tempfile      = { workspace = true }
tower         = { workspace = true, features = ["util"] }
rcgen         = "0.11"
